--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,13 @@
 .app-wrapper {
-  display: grid;
-  margin: 0 auto;
-  width: 1200px;
-  grid-template-areas:
-  "h h"
-  "n c"
-  ;
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
-  
+    display: grid;
+    margin: 0 auto;
+    width: 1200px;
+    grid-template-areas: "h h" "n c";
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
 }
 
-.header {
-  grid-area: h;
-  background-color: teal;
-}
-
-.header img {
-  width: 60px;
-}
-
-.nav {
-  grid-area: n;
-  background-color: tomato;
-}
-
-.content {
-  grid-area: c;
-  background-color: seagreen;
+.app-wrapper-content {
+    grid-area: c;
+    background-color: seagreen;
 }
